Update missing functions
