# cmd/service/dtos/service_dto.go
@@ -24,6 +24,6 @@ type ServiceInstanceActionGroupDto struct {
 type ServiceInstanceActionDto struct {
 	Name    string `json:"name" example:"Expose service"`
 	Command string `json:"command" example:"cmdExpose"`
-	Placeholder interface{} `json:"placeholder" example:"any object"`
+	Placeholder string `json:"placeholder" example:"any object"`
 }
 
